fix notice wrap to not overlap page

--- a/modules/notices/notices.css
+++ b/modules/notices/notices.css
@@ -1,4 +1,4 @@
-.uNotices-wrap { overflow:hidden; position:fixed; top:0; left:0; width:100%; z-index: 999999; }
+.uNotices-wrap { position:fixed; top:0; left:0; width:100%; height:0px; overflow:visible; z-index: 999999; }
 .uNotices { width:600px; margin: 0 auto; background:black; 
 	-webkit-border-bottom-right-radius: 5px;
 	-webkit-border-bottom-left-radius: 5px;
